<resources>
    <string name="app_name">FlashNote</string>
    <string name="app_id">5aa758dc</string>
    <!-- 听写 -->
    <string name="text_begin">Start sparking</string>
    <string name="pref_key_iat_show">iat_show</string>
    <!-- 语言 -->
    <string-array name="language_entries">
        <item>Mandarin</item>
        <item>Cantonese</item>
        <item>English</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>en_us</item>
    </string-array>
    <!-- 标点符号 -->
    <string-array name="punc_entries">
        <item>Punctuation</item>
        <item>No Punctuation</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <!--nav_menu-->
    <string name="friends">Friends</string>
    <string name="update">Update</string>
    <string name="trash">Trash</string>
    <string name="setting">Settings</string>
    <!--setting-->
    <string name="language">Record Language</string>
    <string name="punctuation">Punctuation</string>
    <string name="upload_contact">Upload Contact</string>
    <string name="Cloud">Wuke Cloud</string>
    <string name="support">Support: Mandarin, Cantonese, English</string>
    <string name="default_punc">Default value: punctuation</string>
    <string name="done">Done</string>
    <string name="sign_out">Sign out</string>
    <string name="status">Your account is active.</string>
    <string name="record">Record</string>
    <string name="command">Command</string>
    <string name="about">About</string>
    <!--activity_register-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="register">Register</string>
    <!--main_activity-->
    <string name="slide_cancel">Slide up to cancel</string>
    <string name="loose">Loose finger to stop</string>
    <string name="text">TEXT</string>
    <string name="voice">VOICE</string>
    <string name="play_record">Play Record</string>
    <string name="up_login">You have not log in</string>
    <!--activity_login-->
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="for_pass">Forget the password?</string>
    <string name="stop">Cancel</string>
    <string name="login_p">Accessing</string>
    <!--Dialog-->
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="e_mail">Send Email to reset the password</string>
    <string name="taobao">Open Taobao to Search</string>
    <string name="wechat">Open Wechat to send a message</string>
    <string name="calendar">Open Calendar to Create a event</string>
    <string name="wrong_re">Please enter all information</string>
    <!--enter-->
    <string name="enter">Enter the Flash Note</string>
    <string name="version">Version: 1.0.0</string>
    <string name="author">Design By Wuke</string>
    <string name="length">The length of Voice：</string>
    <!--command-->
    <string name="taobao_">TaoBao</string>
    <string name="wechat_">Wechat</string>
    <string name="calendar_">Calendar</string>
    <string name="taobao_c">\"Search … in TasoBao\"</string>
    <string name="wechat_c">\"Share … in Wechat\"</string>
    <string name="calendar_c">\"Create new calendar event …\"</string>
    <!--fail-->
    <string name="fail_read">Fail to load record</string>
    <string name="fail_init">failed to initialize</string>
    <string name="fail_listen">Dictation failure</string>
    <string name="wrong">Username does not exist or password error.</string>
    <string name="back">Back</string>
    <!--friend-->
    <string name="add_friend">Type your friend Wuke\'s username</string>
    <string name="add">Add</string>
    <string name="friend">Friend</string>
    <string name="no_friend">Cannot find this friend</string>
    <!--moment-->
    <string name="moment">Moment</string>
    <!--trash-->
    <string name="voice_trash">Record Note</string>


</resources>
