<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference android:title="Acts like a button"
        android:key="aaaaaa"
        android:summary="This is a cool button"/>

    <ListPreference
        android:key="language_preference"
        android:title="@string/language"
        android:entries="@array/language_entries"
        android:entryValues="@array/language_values"
        android:summary="@string/support" />

    <ListPreference
        android:key="punc_preference"
        android:title="@string/punctuation"
        android:entries="@array/punc_entries"
        android:entryValues="@array/punc_values"
        android:summary="@string/default_punc"
        android:defaultValue="1"  />

    <SwitchPreference
        android:key="contact"
        android:title="@string/upload_contact" />

</PreferenceScreen>
